--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.11.6",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.8",
     "axios": "^1.2.4",
     "formik": "^2.2.9",
     "react": "^18.2.0",
